@@ -1,3 +1,11 @@
+[B]1.2.3[/B]
+- Updated tidalapi
+- Different Settings for Subscription Type and Music Quality
+- New FLAC Login-Token
+- Added Video Playback
+- Added Artist fanart background image
+- Trial-Mode (30 seconds playback without login)
+
 [B]1.2.2[/B]
 - Fixed album listing due to site changes
 
